# V8

./: .coverage  .coveragerc  .env.development  .env.production.template  .env.sample  .env.staging  .gitignore  .safety-policy.yml  .secrets.baseline  AGENTS.md  ALL_OPTIMIZATIONS_IMPLEMENTED.md  BUGS_FIXED.md  CHANGES_IMPLEMENTED.md  CODE_REVIEW_AND_PRODUCTION_PLAN.md  CODE_REVIEW_FINAL.md  CONFIGURATION_SECURITY_GUIDE.md  CRITICAL_GAPS_FIXED.md  CRITICAL_ISSUES_FIXED.md  CRITICAL_ISSUES_SUMMARY.md  DEEP_REVIEW_AND_ENHANCEMENTS.md  DEVELOPMENT.md  Dockerfile  ENV_VARS_REFERENCE.md  FIXES_APPLIED_2025.md  GIT_ISSUES_FIXED.md  GOVERNANCE_FIX_SUMMARY.md  GOVERNANCE_WIRING_COMPLETE.md  GPU_WIRING_CHECK.md  GUARDRAIL_APPLIED.md  INNOVATIVE_FEATURES_PROPOSAL.md  INSTALL.md  INTEGRATION_COMPLETE.md  LICENSE  ORCHESTRATOR_FINAL_SUMMARY.md  ORCHESTRATOR_IMPLEMENTATION_COMPLETE.md  ORCHESTRATOR_INTEGRATION.md  ORCHESTRATOR_QUICK_REFERENCE.md  OUTSTANDING_RECOMMENDATIONS_IMPLEMENTED.md  PACKAGE_MANIFEST_GOV_ROUTING.md  PATCH_PACK_3_MANIFEST.md  (+37 more)
.github/workflows/: constitutional-ci.yml  detect-secrets.yml  performance-benchmarks.yml  quality-checks.yml  test-coverage.yml
Demo/: demo_api.py
ELEANOR-V75_code/: README.md  requirements.txt  run.sh
api/: __init__.py  bootstrap.py  replay_store.py  schemas.py
config/: caching.yaml  eleanor.yaml  gpu.yaml  models.yaml  models_saved.yaml  observability.yaml  resilience.yaml  resource_management.yaml  secrets.yaml.example  security.yaml  settings.py  validation.py
critics/: __init__.py  aggregate.py  autonomy.py  base.py  dignity.py  fairness.py  helpers.py  llm.py  llm_impl.py  pragmatics.py  precedent.py  risk.py  router.py  schema.py  truth.py
docker/: docker-compose.production.yaml  docker-compose.yaml  prometheus.yml  readme.md  start.sh
docs/: #L01f4d8 INTERPRETIVE_PROCESSOR_ARCHITECTURE.md  ARCHITECTURE.md  CACHING.md  CLI_DRY_RUN.md  CONFIGURATION_SECURITY_GUIDE.md  CRITIC_INDEPENDENCE_AND_ESCALATION.md  Critics_Escalation_Governance_Handbook.md  DISASTER_RECOVERY.md  ESCALATION_Tiers_Human_Review_Doctrine.md  GOVERNANCE.md  GOVERNANCE_OBSERVABILITY.md  GPU_ACCELERATION.md  GPU_ARCHITECTURE.md  GPU_BENCHMARKS.md  GPU_QUICK_START.md  GPU_TROUBLESHOOTING.md  HUMAN_REVIEWER_ONBOARDING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  MODEL_CONFIGURATION.md  NEW_FEATURES_IMPLEMENTATION.md  OBSERVABILITY.md  PATCH_PACK_4_APPLY.md  PERFORMANCE_BENCHMARKS.md  POLICY_CONSTITUTIONAL_GOVERNANCE.md  PRECEDENT_LEDGER.md  PRODUCTION_CHECKLIST.md  README.md  RELEASE_NOTES.md  RESILIENCE.md  RESOURCE_MANAGEMENT.md  ROUTING_SPEC.md  RUNBOOKS.md  SECRETS_MANAGEMENT.md  SECURITY.md  SECURITY_AWS_DEPLOYMENT.md  SECURITY_VAULT_DEPLOYMENT.md  V8_SPEC.md  configuration.md  gpu-acceleration.md  (+2 more)
eleanor_v8.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
engine/: __init__.py  audit.py  critic_aggregator.py  critic_runner.py  engine.py  evidence_recorder_async.py  exceptions.py  factory.py  logging_config.py  mocks.py  protocols.py  replay_store.py  resource_manager.py  types.py  validation.py  version.py
examples/: adaptive_weighting_demo.py  gpu_example.py  gpu_integration.py  gpu_integration_example.py  integration_example.py  model_configuration_examples.py  streaming_governance_demo.py  temporal_evolution_demo.py
governance/: __init__.py  audit.py  audit_sink.py  autonomy_check.rego  cli.py  constitutional.yaml  constitutional_gate.rego  critic_escalation.py  decision.rego  dignity_check.rego  escalation.rego  fairness_check.rego  governor.py  pragmatics.rego  precedent_engine.py  reversibility.rego  review_packets.py  review_triggers.py  router.py  router_config.yaml  safety_gate.rego  stewardship.py  truth_check.rego  types.py
instruction/: ELEANOR_V8_Claude_Code_Instructions.md
llm/: __init__.py  anthropic_client.py  base.py  factory.py  gemini_client.py  llama_client.py  mock.py  openai_client.py  xai_client.py
logs/: eleanor_audit.jsonl
monitoring/: alerting-rules.yml  grafana-dashboards.json
opa/: README.md
patches/: engine_engine_py.patch
precedent/: __init__.py  promotion_guard.py  promotion_router.py  quarantine.py  udhr.py
scripts/: bootstrap_governance_observability.sh  build_appliance.sh  check_performance_regression.py  compare_benchmarks.py  coverage_report.py  create_ledger_ddb_table.py  demo_human_review.py  dependency_prometheus_exporter.py  deploy_governance_alerts.sh  deploy_grafana_dashboard.sh  generate_detectors.py  generate_secrets.sh  install_macos.sh  redteam_runner.py  reload_prometheus.sh  start.sh  start_and_register_llama.sh  start_local.sh  validate_config.py  validate_env.sh  verify_ledger.py
tests/: conftest.py  test_aggregator_escalation.py  test_aggregator_v8.py  test_api_bootstrap.py  test_api_rest_endpoints.py  test_api_schemas_extra.py  test_api_smoke.py  test_async_evidence_recorder_extra.py  test_async_gpu_executor.py  test_async_resource_management.py  test_auth_middleware.py  test_auth_middleware_extra.py  test_config_proposals_strong_preview.py  test_config_settings.py  test_constitutional_compliance.py  test_constitutional_guarantees.py  test_constitutional_invariants.py  test_credential_sanitizer.py  test_critic_evaluation.py  test_critic_names_extra.py  test_critics_v8.py  test_detector_branches.py  test_detectors_comprehensive.py  test_detectors_engine_extra.py  test_detectors_v8.py  test_engine_advanced_branches.py  test_engine_aggregation.py  test_engine_branches.py  test_engine_critics.py  test_engine_detail_levels.py  test_engine_detectors.py  test_engine_error_paths.py  test_engine_evidence.py  test_engine_helpers.py  test_engine_init.py  test_engine_missing_paths.py  test_engine_precedent.py  test_engine_resource_management.py  test_engine_resource_management_extra.py  test_engine_routing.py  (+52 more)
ui/: README.md  index.html  package-lock.json  package.json  quarantine_view.json  vite.config.js
(+325 files in other folders)
