[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eleanor-v8"
version = "8.0.0"
description = "ELEANOR Constitutional AI Governance Engine V8"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "ELEANOR Project"},
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "pytest-benchmark>=4.0",
    "black>=24.3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pyright>=1.1.350",
    "types-PyYAML>=6.0",
    "types-requests>=2.32",
    "bandit>=1.7.7",
    "safety>=2.3",
]

observability = [
    "structlog>=23.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-jaeger>=1.20.0",
]

cache = [
    "redis>=5.0",
    "cachetools>=5.0",
]

security = [
    "boto3>=1.28.0",  # AWS Secrets Manager
    "hvac>=1.2.0",    # HashiCorp Vault
]

[tool.hatch.build.targets.wheel]
packages = ["engine", "governance", "api"]

[tool.pytest.ini_options]
pythonpath = [".", "engine"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "performance: performance benchmarks",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = "engine/gpu/|engine/observability/|engine/resilience/|engine/cache/|engine/config/|engine/core/|engine/validation.py"
