[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eleanor-v8"
version = "8.0.0"
description = "ELEANOR Constitutional AI Governance Engine V8"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "ELEANOR Project"},
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.0",
    "xxhash>=3.4.0",  # Fast hash for cache keys
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "PyJWT>=2.8.0",
]

dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "pytest-benchmark>=4.0",
    "black>=24.3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pyright>=1.1.350",
    "types-PyYAML>=6.0",
    "types-requests>=2.32",
    "bandit>=1.7.7",
    "safety>=2.3",
]

observability = [
    "structlog>=23.0",
    "colorama>=0.4.6",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-jaeger>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation>=0.43b0",
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
]

cache = [
    "redis>=5.0",
    "aioredis>=2.0.1",
]

security = [
    "boto3>=1.28.0",  # AWS Secrets Manager
    "hvac>=1.2.0",    # HashiCorp Vault
]

vector = [
    "psycopg2-binary>=2.9.0",
    "weaviate-client>=4.0.0",
]

llm = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "voyageai>=0.2.0",
    "sentence-transformers>=2.6.0",
    "transformers>=4.40.0",
]

gpu = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "nvidia-ml-py3>=7.352.0",
    "gputil>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["engine", "governance", "api"]

[tool.pytest.ini_options]
pythonpath = [".", "engine"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated.*:DeprecationWarning:pytest_asyncio.plugin",
    "ignore:'asyncio.get_event_loop_policy' is deprecated.*:DeprecationWarning:pytest_asyncio.plugin",
]
markers = [
    "performance: performance benchmarks",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = "engine/gpu/|engine/observability/|engine/resilience/|engine/cache/|engine/config/|engine/core/|engine/validation.py"
